<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E2176"
    tools:context=".EntrarActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="374dp"
        android:layout_height="239dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCadastro"
        app:srcCompat="@drawable/meiofundologin" />

    <EditText
        android:id="@+id/txtUsuarioEntrar"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="168dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtUsuarioEntrar"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCadastro" />

    <TextView
        android:id="@+id/lblUsuarioCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/lblUsuario"
        android:textColor="#C9FF31"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuarioEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lblCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lblEntrar"
        android:textColor="#C9FF31"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblSenhaCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSenha"
        android:textColor="#C9FF31"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtSenhaEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnLogar"
        android:layout_width="241dp"
        android:layout_height="96dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/btnEntrarApp"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btnentrar" />

    <EditText
        android:id="@+id/txtSenhaEntrar"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtSenhaEntrar"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioEntrar" />

    <Button
        android:id="@+id/btnEsqueciSenha"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#00814A4A"
        android:shadowColor="#00FFFFFF"
        android:stateListAnimator="@null"
        android:text="@string/btnEsqueciSenha"
        android:textColor="#FDF000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorHint="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.704"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#00FFFFFF" />



</androidx.constraintlayout.widget.ConstraintLayout>