<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E2176">

    <TextView
        android:id="@+id/lblEsqueceuSenha"
        android:layout_width="317dp"
        android:layout_height="90dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="47dp"
        android:text="@string/lblEsqueceuSenha"
        android:textAlignment="center"
        android:textColor="#C9FF31"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/txtEmailRecuperar"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtEmailRecuperar"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#9E9E9E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblEsqueceuSenha" />


    <TextView
        android:id="@+id/lblInstrucoes"
        android:layout_width="325dp"
        android:layout_height="60dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/abeezee"
        android:text="@string/lblInstrucoes"
        android:textColor="#FBFAFA"
        app:layout_constraintBottom_toTopOf="@+id/btnEnviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/lblInstrucoes" />

    <ImageButton
        android:id="@+id/btnEnviar"
        android:layout_width="241dp"
        android:layout_height="96dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#00000000"
        android:contentDescription="@string/btnEntrarApp"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/enviar" />


</androidx.constraintlayout.widget.ConstraintLayout>