<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E1F6D"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/lblTriPixel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/lblTriPixel"
        android:textColor="#C9FF31"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnEntrar"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnCadastro"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btnentrar" />

    <ImageButton
        android:id="@+id/btnCadastro"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/btnCadastrar"
        android:foreground="?android:attr/selectableItemBackground"

        android:scaleType="centerInside"
        android:src="@drawable/btncadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@drawable/btncadastrar" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="334dp"
        android:layout_height="423dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTriPixel"
        app:srcCompat="@drawable/tripixellogo"
        android:contentDescription="TODO" />


</androidx.constraintlayout.widget.ConstraintLayout>