<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3E1F6D"
    tools:context=".PerfilActivity">



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/fundoperfil" />

    <ImageButton
        android:id="@+id/btnSair"
        android:layout_width="162dp"
        android:layout_height="62dp"
        android:layout_marginBottom="17dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/txtvazio"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/btnsair"
        tools:ignore="SpeakableTextPresentCheck" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgPerfil"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_launcher_foreground"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/lblUsuario"
        android:layout_width="66dp"
        android:layout_height="26dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="164dp"
        android:text="@string/lblUsuario"
        android:textColor="#83E100"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/lblEmail"
        android:textColor="#83E100"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/lblUsuario" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="170dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/lblUsuario"
        app:layout_constraintTop_toTopOf="@+id/lblUsuario" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="171dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/lblEmail"
        app:layout_constraintTop_toTopOf="@+id/lblEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>